--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;700&display=swap');
 
 :root {
-  --warna-coklat-tua: #2A1E1A;
-  --warna-emas-tua: #D9A24D;
-  --warna-emas-muda: #EED2A4;
-  --warna-coklat-gelap: #1E1613;
+  --dark-brown: #2A1E1A;
+  --dark-gold: #D9A24D;
+  --light-gold: #EED2A4;
+  --deep-brown: #1E1613;
   
   /* Secondary Colors */
-  --warna-abu-hangat: #A09D8D;
-  --warna-krem-gelap: #E0EFF6;
-  --warna-krem-terang: #FFF4E7;
-  --warna-putih-pudar: #F0EFE7;
+  --warm-gray: #A09D8D;
+  --dark-cream: #E0EFF6;
+  --light-cream: #FFF4E7;
+  --faded-white: #F0EFE7;
 }
 
 body {
   font-family: "Cormorant Garamond", serif;
   font-weight: 400; /* Regular */
-  color: var(--warna-emas-tua);
+  color: var(--dark-gold);
   /* Ukuran font dasar */
   font-size: 1.25rem; /* 16px */
 }
@@ -24,7 +24,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Cormorant Garamond", serif;
   font-weight: 700; /* Bold */
-  color: var(--warna-emas-muda);
+  color: var(--light-gold);
 }
 
 h1 {
